Inizio pagina contatti

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -152,7 +152,7 @@ knp_menu:
 
 knp_paginator:
     template:
-        pagination: ::sliding.html.twig     
+        pagination: MetronicAdminBundle::pagination/sliding.html.twig     
         
 jf_core:
     default_home_route: negozio
