--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -41,6 +41,10 @@ assetic:
     #bundles:        [ ]
     #java: /usr/bin/java
     filters:
+        yui_css:
+            jar: "%kernel.root_dir%/Resources/java/YUI_Compressor.jar"
+        yui_js:
+            jar: "%kernel.root_dir%/Resources/java/YUI_Compressor.jar"
         cssrewrite: ~
         #closure:
         #    jar: %kernel.root_dir%/Resources/java/compiler.jar
