--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -6,13 +6,12 @@ parameters:
     database_user: root
     database_password: Ephraim76
     
-    mailer_transport: smtp
     mailer_auth_mode: login
-    mailer_host: localhost
-    mailer_username: marketing@wsprice.it
-    mailer_password: pwd 
+    mailer_transport: smtp
+    mailer_host: mail.wsprice.it
+    mailer_password: w0rld5t1k3rpr1c€ 
     mailer_user: marketing@wsprice.it
-    mailer_port: 25
+    mailer_port: 2525
     
     locale: it
     secret: ThisTokenIsNotSoSecretChangeIt
