Bundle shop e crud crediti (migliorabile impaginazione form

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
+wsp_shop:
+    resource: "@WSPShopBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 hours_video:
     resource: "@HoursVideoBundle/Controller/"
     type:     annotation
